--- a/abouttt.html
+++ b/abouttt.html
@@ -19,7 +19,7 @@
 <!-- Navigation Section -->
 <nav>
     <ul>
-        <li><a href="indexxx.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="abouttt.html">About</a></li>
         <li><a href="schoolll.html">School</a></li>
     </ul>
