--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="abouttt.html">About</a></li>
             <li><a href="schoolll.html">School</a></li>
         </ul>
